--- a/Security_service.html
+++ b/Security_service.html
@@ -5,19 +5,22 @@
 <title>Page Title</title>
 </head>
 <body>
-    <header>
-        <h1>E Mark Consulting LLC</h1>
-        <nav class="navbar">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="Security_service.html">Security Services</a></li>
-                <li><a href="MnM.html">M&M Auto dealership</a></li>
-                <li><a href="Protective_service.html">Protective Sercives</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
+       <header>
+        <a href="index.html" class="logo-link">
+            <img src="images/emartent_logo.png" alt="E Mark Logo" class="logo">
+        </a>
     </header>
+
+<nav class="navbar">
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="Security_service.html">Security Services</a></li>
+        <li><a href="MnM.html">M&M Auto dealership</a></li>
+        <li><a href="Protective_service.html">Protective Sercives</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
+    </ul>
+</nav>
     <section class="section" style="background-image: url('images/what-is-cybersecurity.jpg');">
     
     </section>
